# component-dv360

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bitbucket-pipelines.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: component.py  configuration.py
src/google_dv360/: __init__.py  client.py
tests/: __init__.py  test_component.py
