[project]
name = "kds-team-ex-dv360"
version = "0.1.0"
description = "Keboola DV360 Extractor"
requires-python = "~=3.14.0"
dependencies = [
    "dateparser>=1.1.7",
    "google-api-python-client~=2.71.0",
    "google-auth-oauthlib~=0.8.0",
    "keboola-component>=1.4.0",
    "keboola-utils>=1.1.0",
    "pydantic>=2.0",
    "requests>=2.28.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP"]

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "mock>=5.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
